# datasentinel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: all-checks.yml  create-release.yml  rw-build-publish.yml  rw-is-release-check.yml  rw-lint.yml  rw-unit-tests.yml
dataguard/: __init__.py  core.py
dataguard/notification/: event.py  notify_event.py
dataguard/notification/notifier/: core.py  manager.py
dataguard/notification/notifier/email/: __init__.py  email.py  smtp_email_notifier.py
dataguard/notification/notifier/slack/: slack_notifier.py
dataguard/notification/renderer/: core.py
dataguard/notification/renderer/email/: __init__.py  email_html_renderer.py  email_message_renderer.py  template_email_message_renderer.py
dataguard/notification/renderer/slack/: __init__.py  slack_message.py  slack_message_render.py  slack_message_renderer.py
dataguard/session/: __init__.py  core.py  data_guard_session.py  manager.py  metric_store_manager.py  session_configuration.py  validation_session.py
dataguard/store/audit/: core.py  manager.py  row.py  row_builder.py
dataguard/store/audit/database/: __init__.py  database_audit_store.py
dataguard/store/audit/spark/: __init__.py  deltatable_audit_store.py
dataguard/store/audit/text/: __init__.py  csv_audit_store.py
dataguard/store/result/: core.py  manager.py
dataguard/store/result/spark/: __init__.py  deltatable_result_store.py
dataguard/store/result/text/: __init__.py  csv_result_store.py
dataguard/store/utils/: deltatable_appender.py  spark_utils.py
dataguard/validation/: core.py  data_validation.py  exceptions.py  result.py  status.py  validation_suite.py  workflow.py
dataguard/validation/bad_records/: core.py  pandas_bad_records_dataset.py  spark_bad_records_dataset.py
dataguard/validation/check/: __init__.py  check.py  core.py  custom_check.py  df_type.py  level.py  result.py  utils.py
dataguard/validation/check/cuallee/: __init__.py  check.py  cuallee_check.py
dataguard/validation/check/row_level_check/: __init__.py  pandas_strategy.py  pyspark_strategy.py  row_level_check.py  utils.py  validation_strategy.py
dataguard/validation/check/row_level_result/: __init__.py  check.py  pandas_strategy.py  pyspark_strategy.py  rule.py  utils.py  validation_strategy.py
dataguard/validation/data_asset/: core.py  memory.py
dataguard/validation/datasource/: core.py  memory.py
dataguard/validation/failed_rows_dataset/: core.py  pandas.py  spark.py
dataguard/validation/node/: core.py  result.py  validation_node.py
dataguard/validation/result/: __init__.py  check_result.py  core.py  pandas_bad_records_dataset.py  pandas_check_result.py  pyspark_check_result.py  rule_metric.py  spark_bad_records_dataset.py  validation_result.py  validation_suite_result.py
dataguard/validation/rule/: metric.py
dataguard/validation/runner/: core.py  simple_runner.py  simple_workflow_runner.py
dataguard/validation/suite/: result.py  validation_suite.py
datasentinel/: __init__.py  core.py
datasentinel/notification/: __init__.py
datasentinel/notification/notifier/: __init__.py  core.py
datasentinel/notification/notifier/email/: __init__.py
datasentinel/notification/notifier/slack/: __init__.py
datasentinel/notification/renderer/: core.py
datasentinel/notification/renderer/email/: __init__.py
datasentinel/notification/renderer/slack/: __init__.py
datasentinel/session/: __init__.py  core.py  data_guard_session.py
datasentinel/store/audit/: core.py
datasentinel/store/audit/database/: __init__.py
datasentinel/store/audit/spark/: __init__.py
datasentinel/store/result/: core.py
datasentinel/store/result/spark/: __init__.py
datasentinel/store/utils/: deltatable_appender.py
datasentinel/validation/check/: __init__.py  core.py
datasentinel/validation/check/row_level_result/: check.py
datasentinel/validation/data_asset/: core.py
datasentinel/validation/failed_rows_dataset/: core.py
datasentinel/validation/runner/: core.py
scripts/: extract_release_notes.py
scripts/gh_actions/: extract_release_version.py
tests/: conftest.py
tests/notification/notifier/: test_notifier_manager.py
tests/notification/notifier/email/: test_smtp_email_notifier.py
tests/notification/notifier/slack/: test_slack_notifier.py
tests/notification/renderer/email/: test_template_email_message_renderer.py
tests/notification/renderer/slack/: test_slack_message_renderer.py
tests/session/: test_data_guard_session.py  test_data_sentinel_session.py
tests/store/audit/: test_audit_store_manager.py  test_base_audit_row.py
tests/store/audit/database/: test_database_audit_store.py
tests/store/audit/spark/: test_deltatable_audit_store.py
tests/store/result/: test_result_store_manager.py
tests/store/result/spark/: test_deltatable_result_store.py
tests/store/utils/: test_delta_table_appender.py
tests/validation/: test_data_validation.py  test_data_validation_result.py
tests/validation/check/: test_check_result.py  test_utils.py
tests/validation/check/cualle/: conftest.py
tests/validation/check/cualle/pandas/agnostic/: test_is_between.py  (+5 more)
tests/validation/check/cuallee/: conftest.py  test_check.py  test_check_results.py
tests/validation/check/row_level_result/: conftest.py  test_row_level_result_check.py  test_rule.py  test_rule_class.py  test_utils.py
tests/validation/check/row_level_result/pandas/: test_validate_data_types.py
tests/validation/check/row_level_result/pandas_strategy/: test_validate_data_types.py
tests/validation/check/row_level_result/pyspark/: test_validate_data_types.py
tests/validation/check/row_level_result/pyspark_strategy/: conftest.py  test_are_complete.py  test_is_complete.py  test_validate_data_types.py
tests/validation/data_asset/: test_memory_data_asset.py
tests/validation/failed_rows_dataset/: test_pandas_failed_rows_dataset.py  test_spark_failed_rows_dataset.py
tests/validation/rule/: test_rule_metric.py
tests/validation/runner/: test_simple_runner.py  test_simple_workflow_runner.py
(+68 files in other folders)
